# Copyright 2018 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  use = {
  }
}

# TODO(oka): use.tcmalloc seems to be never used.
# Confirm it and remove the usage of the flag.
if (!defined(use.tcmalloc)) {
  use.tcmalloc = false
}
